# DNNaic

./: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
data/: DATA_SOURCES.md  README.md
dnnaic/: __init__.py  data.py  features.py  semantics.py  tabix.py
paper/: manuscript.bbl  manuscript.tex  refs.bib
results/: appreciable_gate.json  deep_kernel_comparison.json  direction_curve.json  linear_vs_network.json
scripts/: additional_external_benchmarks.py  appreciable_gate.py  bighorn_nbr_rescue_benchmark.py  bpp2023_mccoal_benchmark.py  brook_trout_microsatellite_benchmark.py  channel_ablation.py  classical_baselines.py  deep_kernel_comparison.py  depth_requirement.py  dingo_weeks_2025_external_benchmark.py  direction_curve.py  direction_detection.py  directional_external_benchmarks.py  external_benchmarks.py  extract_padze_from_trees.py  further_external_benchmarks.py  guppy_2020_external_benchmark.py  hantarcticus_2024_external_benchmark.py  harpagifer_external_benchmark.py  linear_vs_network.py  make_figures.py  matched_exposure.py  moment_ablation.py  nuisance_transfer.py  observation_bridge_simulation.py  oyster_2017_external_benchmark.py  ozerov_salmon_benchmark.py  realdata_1000g_injection.py  realdata_heliconius.py  realdata_heliconius_robustness.py  realdata_mouse.py  realdata_mouse_depth.py  realdata_mouse_diversity.py  realdata_neanderthal.py  seabass_external_benchmark.py  simulate_demography.py  stdpopsim_ancient_benchmark.py  stdpopsim_independent_catalog_benchmark.py  stdpopsim_neanderthal_benchmark.py  (+6 more)
(+131 files in other folders)
