[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "dnnaic"
version = "1.0.0"
description = "Inferring the direction of introgression from allelic rarefaction statistics with deep learning"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "Andres del Castillo" },
  { name = "Yitzchak Shmalo" },
]
dependencies = [
  "padze>=0.1.0",
  "numpy>=1.24",
  "pandas>=2.0",
  "scipy>=1.10",
  "scikit-learn>=1.3",
  "matplotlib>=3.7",
]

[project.optional-dependencies]
simulate = ["msprime>=1.2", "tskit>=0.5"]

[tool.setuptools]
packages = ["dnnaic"]
